IR update + new figs

--- a/conclusion.tex
+++ b/conclusion.tex
@@ -12,14 +12,20 @@
 %     --> 
 
 
-%%% TODO TODO TODO TODO TODO TODO 
+% 1  emphasize the importance of spatial-dispersive electrodynamics
+%spatially-dispersive media, that is, to account for the material properties depending not only on the frequency, but also on the magnitude of the wave vector.
+% 4  note that, although many successes have been achieved, all metamaterial application still suffer from fundamental issues as excessive losses and anisotropy
+%	 and on the example of dielectric rods, show that it probably can not be overcome without a significant breakthrough
+
 %%% Hole : Conclusion - what to put here?
 %% NOTES: What WAS discussed in the thesis and is special:
+%  * aims to present an accessible introduction to the electrodynamics of periodic structures. 
 %  * historical notes 
 % 	(the base line is that many concepts are not as novel as they may appear, and that modern papers
 %	often fail to cite the author of the original idea)
 %  * filled the demand for some starting overview of the common structures
 %  * unification of MM and PhC concepts, attempt for clarification of these two terms
+%
 %  * pointed out the fundamental problems: 
 %      1) losses in available materials, 
 %      2) excessive spatial dispersion in known structures; i.e. the eff-param spectra often 'stick' to the BZ boundary
