--- a/theory.tex
+++ b/theory.tex
@@ -872,9 +872,9 @@ which all
 %maintain the requirement of the mode function $\mathbf{u_{e}}(\rr)$ being periodic and still 
 give the exactly same resulting plane wave. 
 
-\begin{figure}[ht] \caption{Folded and unfolded dispersion curves for free space and a periodic structure viewed along one of its axes. The phase difference over a unit cell can be expressed either by the wavenumber $K$ (unfolded plots \textbf{a, b} above), or it can be partially absorbed into the periodic mode function $\mathbf{u}(\rr)$ (folded plots \textbf{c, d} below)\\
+\begin{figure}[ht] \caption{Folded and unfolded dispersion curves for free space and a periodic structure viewed along one of its axes. The phase difference over a unit cell can be expressed either by the wavenumber $K$, as it is in the unfolded plots \textbf{(a)}, \textbf{(b)} above, or it can be predominantly absorbed into the periodic mode function $\mathbf{u}(\rr)$  as in the folded plots \textbf{(c)}, \textbf{(d)} below with inaccessible $K$-values greyed out. \\
 The lattice periodicity allows to draw the dispersion curves of periodic structures using natural scale-invariant units, with the Bloch wave number $K$ divided by the spatial frequency of the lattice $2\pi/a$, and the angular frequency $\omega$ multiplied by the time needed for the light to traverse the unit cell.
-} \label{fg_phcfolding} \centering  %% TODO write caption; complement the text to match
+} \label{fg_phcfolding} \centering 
 	\includegraphics[width=\textwidth]{img/PhC_folding_illustration.pdf} 
 \end{figure}
 \clearpage
